Your commit message here

--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "e-commerce-app",
   "private": true,
+  "homepage": "https://github.com/Usman-co/E-Commerce-App",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
